force-app/main/default/objects/BLN_ReasonCodesMapping__mdt/BLN_ReasonCodesMapping__mdt.object-meta.xml
<CustomObject>
    <description>This mapping is used in the flow to determine whether any Service Appointment cancellation was initiated by the Motorist or Belron. It also provides the SA Failure Reasons to the Case Primary and Secondary Reasons.</description>
    <label>Cancellation Reason Codes Mapping</label>
    <pluralLabel>Cancellation Reason Codes Mappings</pluralLabel>
</CustomObject>