force-app/main/default/objects/BLN_ReasonCodesMapping__mdt/fields/BLN_FailureReasonSA__c.field-meta.xml
<CustomField>
    <fullName>BLN_FailureReasonSA__c</fullName>
    <label>Failure Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Issue</fullName>
                <default>true</default>
                <label>Customer Issue</label>
            </value>
            <value>
                <fullName>Customer Vehicle Issue</fullName>
            </value>
            <value>
                <fullName>Repair</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>