force-app/main/default/objects/BLN_ReasonCodesMapping__mdt/fields/BLN_InitiatedBy__c.field-meta.xml
<CustomField>
    <fullName>BLN_InitiatedBy__c</fullName>
    <label>Initiated By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Belron</fullName>
                <default>true</default>
                <label>Belron</label>
            </value>
            <value>
                <fullName>Motorist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>