force-app/main/default/objects/BLN_ReasonCodesMapping__mdt/fields/BLN_PrimaryReasonCase__c.field-meta.xml
<CustomField>
    <fullName>BLN_PrimaryReasonCase__c</fullName>
    <label>Primary Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
                <default>true</default>
                <label>Customer</label>
            </value>
            <value>
                <fullName>Non Opportunity</fullName>
            </value>
            <value>
                <fullName>Appointment (ETA)</fullName>
            </value>
            <value>
                <fullName>Not Repairable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>