force-app/main/default/objects/BLN_ReasonCodesMapping__mdt/fields/BLN_SecondaryReasonCase__c.field-meta.xml
<CustomField>
    <fullName>BLN_SecondaryReasonCase__c</fullName>
    <label>Secondary Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unsure Of Availability</fullName>
                <default>true</default>
                <label>Unsure Of Availability</label>
            </value>
            <value>
                <fullName>No Show</fullName>
            </value>
            <value>
                <fullName>Duplicate Job</fullName>
            </value>
            <value>
                <fullName>Completed Elsewhere Sooner</fullName>
            </value>
            <value>
                <fullName>Car Has Other Damaged</fullName>
            </value>
            <value>
                <fullName>Too Large To Be Repaired, Declined W/S</fullName>
            </value>
            <value>
                <fullName>Customer Concern Of Risk Of Cracking</fullName>
            </value>
            <value>
                <fullName>Multiple Chips On W/S, Declined W/S</fullName>
            </value>
            <value>
                <fullName>To Small To Be Repaired</fullName>
            </value>
            <value>
                <fullName>Repaired Before</fullName>
            </value>
            <value>
                <fullName>Location Of Damage, Declined W/S</fullName>
            </value>
            <value>
                <fullName>Cracked During Repair, Declined W/S</fullName>
            </value>
            <value>
                <fullName>Not Met Standard Customer Declined Replacement</fullName>
            </value>
            <value>
                <fullName>Location of damage , Declined W/S</fullName>
                <isActive>false</isActive>
                <label>Location of damage , Declined W/S</label>
            </value>
            <value>
                <fullName>Not met standard customer Decline replacement</fullName>
                <isActive>false</isActive>
                <label>Not met standard customer Decline replacement</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>