force-app/main/default/objects/BLN_ReasonCodesMapping__mdt/fields/BLN_SubfailureReasonSA__c.field-meta.xml
<CustomField>
    <fullName>BLN_SubfailureReasonSA__c</fullName>
    <label>Sub-Failure Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cust Unavailable/Cancelled</fullName>
                <default>true</default>
                <label>Cust Unavailable/Cancelled</label>
            </value>
            <value>
                <fullName>Customer No Show</fullName>
            </value>
            <value>
                <fullName>Duplicate Work Order</fullName>
            </value>
            <value>
                <fullName>Job Already Completed</fullName>
            </value>
            <value>
                <fullName>Body Rust Prevented Work</fullName>
            </value>
            <value>
                <fullName>Car Too Damaged To Carry Out Work</fullName>
            </value>
            <value>
                <fullName>Vehicle still in garage/Not delivered</fullName>
            </value>
            <value>
                <fullName>Vehicle Won’t Start/Broken Down/Insufficient Charge</fullName>
            </value>
            <value>
                <fullName>Too Large to Repair</fullName>
            </value>
            <value>
                <fullName>Customer Concern, Repair Cracking off</fullName>
            </value>
            <value>
                <fullName>Multiple Impact on W/S</fullName>
            </value>
            <value>
                <fullName>Repair too Small/No Damage</fullName>
            </value>
            <value>
                <fullName>Repair Done before</fullName>
            </value>
            <value>
                <fullName>Location of Repair on W/S</fullName>
            </value>
            <value>
                <fullName>Repair Cracked off</fullName>
            </value>
            <value>
                <fullName>Repair too large after completion</fullName>
            </value>
            <value>
                <fullName>Too Close to ADAS Camera</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>