force-app/main/default/objects/BLN_ReasonCodesMapping__mdt/listViews/BLN_AllMetadata.listView-meta.xml
<ListView>
    <fullName>BLN_AllMetadata</fullName>
    <columns>MasterLabel</columns>
    <columns>BLN_FailureReasonSA__c</columns>
    <columns>BLN_SubfailureReasonSA__c</columns>
    <columns>BLN_PrimaryReasonCase__c</columns>
    <columns>BLN_SecondaryReasonCase__c</columns>
    <columns>BLN_InitiatedBy__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Metadata</label>
    <language>en_US</language>
</ListView>